# iced_sequencing

./: .gitignore  Cargo.toml  README.md
examples/grid_designer/: Cargo.toml
examples/grid_designer/src/: main.rs
examples/simple/: Cargo.toml
examples/simple/src/: main.rs
src/: lib.rs
src/core/: grid.rs  mod.rs  state.rs  utils.rs
src/graphics/: grid.rs  h_list.rs  mod.rs  multi_slider.rs  snapshot.rs
src/native/: grid.rs  mod.rs  multi_slider.rs  snapshot.rs  snapshot_view.rs
src/native/grid/: mod.rs  mod_old.rs
src/native/grid/modes/: idle.rs  logo.rs  logoctrl.rs  mod.rs  shift.rs
src/native/h_list/: content.rs  draggable.rs  mod.rs  state.rs  title_bar.rs
src/style/: color.rs  color_utils.rs  grid.rs  h_list.rs  hex.rs  mod.rs  multi_slider.rs  snapshot.rs
