[package]
name = "iced_sequencing"
version = "0.0.1"
authors = ["matthieu gayon <matthieu.gayon@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]

members = [
    "examples/simple"
]

[dev-dependencies]
iced = "0.3"

[dependencies]
iced_native = "0.4"
iced_style = "0.3"
iced_graphics = { version = "0.2", features = ["canvas"] }
ganic-no-std = { path = "../ganic_rs-workspace/ganic-no-std" }
itertools = "0.9.0"
colors-transform = "0.2.5"
palette="0.5.0"