[package]
name = "iced_sequencing"
version = "0.0.1"
authors = ["matthieu gayon <matthieu.gayon@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]

members = [
    "examples/simple"
]

[dev-dependencies]
iced = { git = "https://github.com/hecrj/iced" }

[dependencies]
iced_core = { git = "https://github.com/hecrj/iced" }
iced_native = { git = "https://github.com/hecrj/iced" }
iced_style = { git = "https://github.com/hecrj/iced" }
iced_graphics = { git = "https://github.com/hecrj/iced" , features = ["canvas"] }

ganic-no-std = { path = "../ganic_rs-workspace/ganic-no-std" }
itertools = "0.9.0"
colors-transform = "0.2.5"
palette="0.5.0"
num-traits = "0.2"
