[package]
name = "iced_sequencing"
version = "0.0.1"
authors = ["matthieu gayon <matthieu.gayon@gmail.com>"]
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]

members = [
    "examples/simple",
    "examples/grid_designer"
]

[dev-dependencies]
iced = { version = "0.4.2", features = ["wgpu"] }

[dependencies]
# web-sys = "0.3.51"
iced_core = "0.5.0"
iced_native = "0.5.0"
iced_style = "0.4.0"
iced_graphics = { version = "0.3.0", features = ["canvas"] }

ganic-no-std = { path = "../ganic_rs-workspace/ganic-no-std" }
itertools = "0.9.0"
colors-transform = "0.2.5"
palette="0.5.0"
num-traits = "0.2"
