[package]
name = "simple"
version = "0.1.0"
authors = ["matthieu gayon <matthieu.gayon@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = "0.3"
iced_native = "0.4"
iced_sequencing = { path = "../../" }
ganic-no-std = { path = "../../../ganic_rs-workspace/ganic-no-std" }