[package]
name = "simple"
version = "0.1.0"
authors = ["matthieu gayon <matthieu.gayon@gmail.com>"]
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version = "0.4.2", features = ["wgpu"] }

iced_sequencing = { path = "../../" }
ganic-no-std = { path = "../../../ganic_rs-workspace/ganic-no-std" }
